# failure-detection

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
conf/: logging.yml
notebooks/: 01_eda.ipynb
src/vessel_failure_detection/: __init__.py  __main__.py  settings.py
